--- a/tomrole/tasks/main.yml
+++ b/tomrole/tasks/main.yml
@@ -1,2 +1,8 @@
 ---
 # tasks file for tomrole
+- include_tasks: adduser.yml
+- include_tasks: installjava.yml
+- include_tasks: installtomcat.yml
+- include_tasks: permissions.yml
+- include_tasks: tomcatadminusers.yml
+- include_tasks: tomcatservice.yml
