--- a/tomrole/tasks/main.yml
+++ b/tomrole/tasks/main.yml
@@ -6,3 +6,4 @@
 - include_tasks: permissions.yml
 - include_tasks: tomcatadminusers.yml
 - include_tasks: tomcatservice.yml
+- include_tasks: tomcatstart.yml
