--- a/tomrole/tasks/installtomcat.yml
+++ b/tomrole/tasks/installtomcat.yml
@@ -1,11 +1,11 @@
 ---
 - name: want to download tomcat
   get_url:
-    url: $ wget https://archive.apache.org/dist/tomcat/tomcat-10/v10.0.8/bin/apache-tomcat-10.0.8.tar.gz
+    url: https://archive.apache.org/dist/tomcat/tomcat-10/v10.0.8/bin/apache-tomcat-10.0.8.tar.gz
     dest: /home/ubuntu/apache-tomcat-10.0.8.tar.gz
     force_basic_auth: yes
 
 - name: extract tar file
   command: 
-      cmd: sudo tar xzvf apache-tomcat-10.0.8.tar.gz -C /opt/tomcat --strip-components=1
+      cmd: sudo tar xzvf /home/ubuntu/apache-tomcat-10.0.8.tar.gz -C /opt/tomcat --strip-components=1
       creates: /opt/tomcat/LICENSE
